openshift/svc-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the database server
  creationTimestamp: 2018-07-23T16:05:38Z
  labels:
    app: nodejs-mongo-persistent
    template: nodejs-mongo-persistent
  name: mongodb
  namespace: pipeline-demo
  resourceVersion: "2162"
  selfLink: /api/v1/namespaces/pipeline-demo/services/mongodb
  uid: 3dd20095-8e92-11e8-9423-ee150393fa2b
spec:
  clusterIP: 172.30.67.11
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    name: mongodb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
