openshift/svc-nodejs-mongo-persistent.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
    service.alpha.openshift.io/dependencies: '[{"name": "mongodb", "kind": "Service"}]'
  creationTimestamp: 2018-07-23T16:05:38Z
  labels:
    app: nodejs-mongo-persistent
    template: nodejs-mongo-persistent
  name: nodejs-mongo-persistent
  namespace: pipeline-demo
  resourceVersion: "2154"
  selfLink: /api/v1/namespaces/pipeline-demo/services/nodejs-mongo-persistent
  uid: 3dbad32f-8e92-11e8-9423-ee150393fa2b
spec:
  clusterIP: 172.30.199.194
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: nodejs-mongo-persistent
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
